--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -28,6 +28,8 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
+                <start-class>com.backend.foro.BackendApplication</start-class>
+
 	</properties>
 	<dependencies>
 		<dependency>
