--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,15 @@
     "autoprefixer": "^10.4.21",
     "axios": "^1.9.0",
     "classnames": "^2.5.1",
+    "jwt-decode": "^4.0.0",
     "postcss": "^8.5.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.58.1",
     "react-router-dom": "^7.6.2",
-    "tailwindcss": "^4.1.8"
+    "react-toastify": "^11.0.5",
+    "tailwindcss": "^4.1.8",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
