--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,1 @@
-VITE_API_URL=https://beneficial-commitment-production.up.railway.app/
+VITE_API_URL=https://beneficial-commitment-production.up.railway.app
